# veb

./: .gitignore  LICENSE.md  README.md  veb.cabal
.github/workflows/: ci.yml
src/: Silly.hs  Silly_3_1.hs
test/silly-3.1/: Test.hs
