cabal-version: 3.4
name: veb
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Shayne Fletcher
maintainer: shaynefletcher@shaynefletcher.org
build-type: Simple
extra-source-files: README.md

common base
  default-language: GHC2024
  ghc-options: -Wall -Werror -fno-ignore-asserts
  build-depends: base >= 4.20.0.0

common lib
  import: base

common test
  import: lib
  build-depends:
    tasty >= 1.2, tasty-hunit >= 0.10.0,
    veb

library
  import: lib
  hs-source-dirs:
    src
  exposed-modules:
    Silly_3_1

test-suite silly-3.1-test
  import: test
  type: exitcode-stdio-1.0
  main-is: test/silly-3.1/Test.hs

executable silly-3.1-executable
  import: base
  build-depends: veb
  main-is: src/Silly.hs
