cabal-version: 3.4
name: veb
version: 0.1.0.0
license: MIT
license-file: LICENSE.md
author: Shayne Fletcher
maintainer: shaynefletcher@shaynefletcher.org
build-type: Simple
extra-source-files: README.md
tested-with: GHC == 9.10.1
description: Data structure research based on "Preserving order in a forest..."
synopsis: Data structures
category: Simple

source-repository head
  type: git
  location: https://github.com/shayne-fletcher/veb.git

flag enable-warnings-as-errors
  default: False
  manual: True
  description: Enable warnings as errors

common base
  default-language: GHC2024
  ghc-options: -Wall -fno-ignore-asserts
  if flag(enable-warnings-as-errors)
    ghc-options: -Werror
  build-depends: base >= 4.20.0.0 && < 5

common lib
  import: base

common test
  import: lib
  build-depends:
    tasty >= 1.2, tasty-hunit >= 0.10.0, random >= 1.2, containers >= 0.7,
    veb

library
  import: lib
  hs-source-dirs:
    src
  exposed-modules:
    Silly_3_1

test-suite silly-3.1-test
  import: test
  type: exitcode-stdio-1.0
  main-is: test/silly-3.1/Test.hs

executable silly-3.1-executable
  import: base
  build-depends: veb
  main-is: src/Silly.hs
